Added entire stat system for custom items and the players Fixed smelter npc to work with new item system Changed mining to work with new stat system Updated forge guis to work better with new item system Updated block system to auto give players world 1 block and not manually have to enter all of the data Added new pickaxe parts and abilities Added special drops